# vsb

./: Cargo.toml  README.md  bump  check  upgrade
.github/: check-binary
.github/workflows/: release.yml  test.yml
src/: check.rs  config.rs  core.rs  encryptor.rs  file_reader.rs  hash.rs  http_client.rs  logging.rs  main.rs  metadata.rs  metrics.rs  oauth.rs  provider.rs  storage.rs  stream_splitter.rs  sync.rs  uploader.rs  users.rs  util.rs
src/backuper/: backup.rs  backuper.rs  mod.rs
src/backuping/: backup.rs  backuper.rs  config.rs  file_reader.rs  filter.rs  mod.rs
src/backuping/testdata/: filter.yaml
src/cli/: mod.rs  parser.rs
src/http_client/: body.rs  client.rs  headers.rs  mod.rs  readers.rs  request.rs  response.rs
src/providers/: dropbox.rs  filesystem.rs  google_drive.rs  mod.rs  oauth.rs  yandex_disk.rs
src/providers/google_drive/: mod.rs  oauth.rs
src/restoring/: file_metadata.rs  mod.rs  multi_writer.rs  plan.rs  restorer.rs  users.rs  util.rs
src/storage/: adapters.rs  backup.rs  backup_group.rs  encryptor.rs  helpers.rs  metadata.rs  mod.rs  traits.rs
src/tests/: mod.rs
src/tests/testdata/root/etc/: config
src/tests/testdata/root/home/other-user/: .gitignore  some-file
src/tests/testdata/root/home/user/: .gitignore  config-link  same-contents-2  unicode'ное имя  with space  не-ascii-имя
src/tests/testdata/root/home/user/fully-excluded/: fully-excluded
src/tests/testdata/root/home/user/partially-excluded/: excluded-1  excluded-2  included-1  included-2
src/tests/testdata/root/home/user/permissions/: permissions
src/tests/testdata/root/var/: data
src/uploader/: mod.rs
src/uploading/: check.rs  config.rs  mod.rs  sync.rs
src/util/: file_reader.rs  hash.rs  mod.rs  stream_splitter.rs  sys.rs
