[package]
name = "vsb"
edition = "2024"
version = "1.1.10"
license = "GPL-3.0+"
keywords = ["backup", "deduplication"]
categories = ["command-line-utilities", "filesystem"]
description = "Very simple in configuring, but powerful backup tool"
exclude = ["/src/tests/testdata"]

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/vsb"
repository = "https://github.com/KonishchevDmitry/vsb"
documentation = "https://github.com/KonishchevDmitry/vsb"
readme = "README.md"

[profile.release]
codegen-units = 1
lto = true

[lints.clippy]
collapsible-if = "allow"
collapsible-else-if = "allow"
derive-partial-eq-without-eq = "allow"
redundant-field-names = "allow"
redundant_guards = "allow"
new-ret-no-self = "allow"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4.5.51"
const_format = "0.2.35"
cow-utils = "0.1.3"
digest = "0.10.7"
easy-logging = "1.1.0"
expanduser = "1.2.2"
filetime = "0.2.26"
globset = "0.4.18"
hex = "0.4.3"
humansize = "2.1.3"
indoc = "2.0.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.177"
log = "0.4.28"
md-5 = "0.10.6"
mime = "0.3.17"
nix = { version = "0.30.1", features = ["fs", "signal", "user"] }
prometheus = "0.14.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shellexpand = "3.1.1"
tar = "0.4.44"
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13.3"

# Force static linking
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_fs = "1.1.3"
maplit = "1.0.2"
rand = "0.9.2"
rstest = "0.26.1"
